# autohelm

./: .gitignore  README.md  platformio.ini  pyproject.toml
.github/actions/platformio-env/: action.yml
.github/workflows/: build.yml
autohelm/: README.md  __init__.py  app.py  build.py  generate.py  pio.py  proto.py  protogen.py  run.py
autohelm/comm/: serial.py
autohelm/pbmsg/: command_pb2.py  status_pb2.py
autohelm/sim/: mockhelm.py  sim.py
autohelm/utils/: build.py  pio.py  protogen.py  udev.py
firmware/: README.md
firmware/lib/nanopb/: command.pb.c  command.pb.h  status.pb.c  status.pb.h
firmware/lib/rc_input/: rc_input.cpp  rc_input.h
firmware/src/: globals.cpp  main.cpp  motors.cpp
include/: pins.h
lib/RCInput/: RCInput.h
lib/rc_input/: rc_input.h
proto/: README.md  command.proto  status.proto
scripts/: pbpy_gen.py
src/: globals.cpp  globals.h  main.cpp  motors.cpp  motors.h  ros.cpp  ros.h  test.cpp.txt
src/firmware/: firmware.ino
