[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autohelm"
version = "2.0"
dependencies = [
  "typer",
  "protobuf",
  "nanopb"
]
requires-python = ">=3.8"
authors = [
  {name = "Sean Fish", email = "seantfish@gmail.com"},
]
description = "Automated Helm Interface"
readme = "README.md"

[project.optional-dependencies]

[project.urls]

[project.scripts]
autohelm = "autohelm.app:cli"

[tool.hatch.build.targets.wheel]
dependencies = ["hatch-build-scripts", "protobuf"]
include = [
  "/autohelm/*.py",
  "/firmware",
  "/platformio.ini",
  "/proto"
]

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
commands = [
    "python3 autohelm/proto.py",
]
artifacts = []
clean_artifacts = false