[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autohelm"
version = "2.0.1"
dependencies = [
  "typer",
  "protobuf<3.20.1",
  "nanopb",
  "platformio",
  "typing_extensions",
  "vserial"
]
requires-python = ">=3.8"
authors = [
  {name = "Sean Fish", email = "seantfish@gmail.com"},
]
description = "Automated Helm Interface"
readme = "README.md"

[project.optional-dependencies]

[project.urls]

[project.scripts]
autohelm = "autohelm.app:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
dependencies = ["hatch-build-scripts", "protobuf", "nanopb"]
include = [
  "autohelm/*.py",
  "autohelm/sim/**",
  "autohelm/pb/**",
  "autohelm/utils/**",
  "autohelm/comm/**",
  "firmware",
  "platformio.ini",
  "proto",
]
artifacts = ["autohelm/pb/**"]

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
commands = [
    ["python autohelm/utils/protogen.py"]
]
clean_artifacts = false
